# streamy

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: __init__.py  config.py  main.py  schemas.py
backend/routes/: chat.py  titles.py
backend/services/: __init__.py  agent_service.py  filter_service.py  llm_factory.py  rag_service.py
chatbot/: agent.py
data/: data.ipynb
frontend/: index.html
frontend/src/: App.css  App.tsx  api.ts
