[project]
name = "netflix-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.45.0",
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.9",
    "langchain-groq>=0.3.7",
    "langchain-ollama>=0.3.6",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "numpy>=2.3.1",
    "openai>=1.95.1",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.46.1",
    "tmdbv3api>=1.9.0",
    "uvicorn[standard]>=0.32.0",
]
